# rocket-simulation-cpp

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.rst  cmake_install.cmake
docs/: 01_Architecture.md
src/environment/: base.hpp  generic.hpp
src/environment/objects/: earth.hpp  moon.hpp
